project/phase2/test/test_12112822_4.out
Error type 8 at line 14: Return value type mismatches the declared type
