project/phase2/test/test_12112822_4.spl
struct Foo{
    int a;
    float b;
    char c;
} makeFoo(int a, float b, char c){
    struct Foo foo;
    foo.a = a;
    foo.b = b;
    foo.c = c;
    return foo;
}

int main(){
    return makeFoo(114514,1919.81,'0');
}